--- a/doc.html
+++ b/doc.html
@@ -51,5 +51,7 @@
             </div>
           </div>
         </nav>
+
+        <p> Documentation for Element 5 can be found here: <a href="https://github.com/Cam-J/babylonJSdev/blob/main/dev.md" class="link-underline-light">B00304728 GitHub</a></p>
     </body>
 </html>
